[package]
name = "patronite-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.19.0"
regex = "1.10.3"
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = { version = "0.4.35"}
tokio = { version = "1", features = ["full"] }
dotenv = { version = "0.15.0"}